# OBDBluetooth

./: .gitignore  CMakeLists.txt  Notatki.txt  TODO.txt
src/: BluetoothConnection.cpp  BluetoothConnection.h  BluetoothConnection.hpp  BluetoothConnectionSimulator.cpp  BluetoothConnectionSimulator.h  BluetoothConnectionSimulator.hpp  DTC_Codes.h  DTC_Codes.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  OBD2Communication.cpp  OBD2Communication.h  OBD2Communication.hpp  OBD2CommunicationSimulator.cpp  OBD2CommunicationSimulator.h  OBD2CommunicationSimulator.hpp  OpenAIDtcAnalyzer.cpp  OpenAIDtcAnalyzer.hpp  main.cpp  resources.qrc
src/interface/: IBluetoothConnection.hpp  IOBD2Communication.hpp
src/sim/: SimBluetoothConnection.cpp  SimBluetoothConnection.hpp  SimOBD2Communication.cpp  SimOBD2Communication.hpp
src/ui/: App.qml  ConnectedWindow.qml  ConnectingWindow.qml  Constants.qml  PageAcceleration.qml  PageDashboard.qml  PageReadErrors.qml  PageTurboChart.qml  StartWindow.qml
